<resources>
    <string name="app_name">AquaSaúde</string>
    <string name="titulo_agente">Agente</string>
    <string name="titulo_sinais">Sinais Clínicos</string>
    <string name="titulo_prevencao">Prevenção</string>
    <string name="titulo_imagens">Imagens</string>
    <string name="atencao">ATENÇÃO:</string>
    <string name="wssv_nome">Síndrome da Mancha Branca</string>
    <string name="wssv_agente">
        " A síndrome da mancha branca é causada por um vírus denominado Vírus da mancha branca,"
        "pertencente à família Nimaviridae e gênero Whispovirus.\n A nomenclatura foi aprovada no"
        "Comitê Internacional de Taxonomia Viral (ICTV) sob depósito cujo nome é White spotsyndrome"
        "vírus 1."</string>
    <string name="wssv_sinais">
        " A Infecção pode causar a doença ou não, dependendo de fatores ainda mal compreendidos, mas"
        "relacionados com a tolerância de espécies e causas ambientais.\n"
        "Manchas brancas embutidas dentro do exoesqueleto é o sinal clínico mais comumente observado."
        "Todavia, outras enfermidades podem causar manchas brancas na carapaça do camarão.\n"
        "Altos graus de variação de cor, com predomínio de avermelhada ou camarão descoloridos rosada"
        "são vistos em populações doentes."</string>
    <string name="wssv_sinais_atencao">
        "Mudanças de comportamento são sinais que devem ser observados atentamente, pois pode ser"
        "esperada uma elevada taxa de mortalidade na população:"</string>
    <string name="wssv_atencao_sinal_1">"Se o camarão parece letárgico"</string>
    <string name="wssv_atencao_sinal_2">"Se a cor muda para rosa ou marrom-avermelhada"</string>
    <string name="wssv_atencao_sinal_3">Se os animais se reúnem em torno das bordas dos cultivos na superfície da água</string>
    <string name="wssv_atencao_sinal_4">Se há uma rápida redução no consumo alimentar</string>
    <string name="wssv_prevencao">
        " Práticas gerais de manejo são as melhores medidas para prevenção do vírus da mancha "
        "branca. Evite altas densidades nas estações frias. Prefira usar animais \"livre de patógenos "
        "específicos\" (SPF) ou povoar com animais testados PCR-negativos. Opte por utilizar água "
        "biossegura e sistemas de policultivo com camarão e peixes."</string>
    <string name="text_saiba_mais_wssv">Mais informações sobre a Síndrome da Mancha Branca:</string>
    <string name="imnv_nome">"Mionecrose Infecciosa"</string>
    <string name="imnv_agente">
        " Vírus da mionecrose infecciosa (IMNV) é um membro da família Totiviridae."</string>
    <string name="imnv_sinais">
        " Na fase aguda da doença, o animal apresenta extensas áreas de necrose brancas nos"
        "músculos, nota-se a perda da transparência na região da cauda, podendo se apresentar"
        "necrótica e avermelhada em alguns camarões. Animais severamente afetados tornam-se moribundos"
        "e a mortalidade pode ser alta e repentina após um evento de estresse."
    </string>
    <string name="imnv_prevencao">
        " Prefira usar animais testados e negativos para IMNV através da técnica de reação em cadeia"
        "reversa da polimerase (RT-PCR). Prefira usar animais livres de patógenos específicos (SPF)."
        "Se houver infecção, realize vazio sanitário conforme recomendações da OIE e MAPA."
        "Utilizar linhagens resistentes de camarões também é uma boa alternativa de prevenção ao IMNV."
    </string>
    <string name="text_saiba_mais_imnv">Mais informações sobre a Mionecrose Infecciosa:</string>
    <string name="ihhnv_nome">"Necrose Hipodermal e Hematopoiética"</string>
    <string name="ihhnv_agente">
        " A infecção hipodermal e necrose hematopoiética é causada por um parvovírus não-"
        "envelopado. O vírus da infecção hipodermal e necrose hematopoiética (IHHNV) está sob"
        "análise no Comitê Internacional de Taxonomia de Vírus (ICTV), classificado atualmente na"
        "família Parvoviridae, gênero Brevidensovirus, espécie Penaeus stylirostris densovirus (PstDNV)."
    </string>
    <string name="ihhnv_sinais">
        "O sinal clínico crônico mais evidente é a síndrome do rostro deformado (RDS), no qual altas"
        "mortalidades são infrequentes. Crescimento reduzido e deformidades na carapaça são"
        "comuns."
        "\nEm alguns casos, pode apresentar mortalidades próximas de 100 %."
    </string>
    <string name="ihhnv_prevencao">
        "Rastreamento prévio de IHHNV por PCR para descartar infecção pelo vírus antes de povoar"
        "tanques e viveiros.Boas práticas de manejo.Animais livres de doença específica podem ser"
        "uma medida, mas não é a mais eficaz neste caso."
    </string>
    <string name="text_saiba_mais_ihhnv">Mais informações sobre a Necrose Hipodermal e Hematopoiética:</string>
    <string name="nhv_nome">"Hepatopancreatite Necrosante"</string>
    <string name="nhv_agente">
        " Hepatopancreatite Necrosante é uma doença bacteriana causada por uma bactéria gram-"
        "negativa, do tipo Rickettsia, que acomete o hepatopâncreas."</string>
    <string name="nhv_sinais">
        " Sinais clínicos incluem: letargia, ingestão de alimentos reduzida, hepatopâncreas atrofiados e"
        "pálidos, anorexia, trato digestivo vazio, elevada conversão alimentar, crescimento reduzido"
        "perceptível. Exoesqueleto amolecido, corpo flácido, cutícula frouxa, brânquias escurecidas,"
        "lesões ulcerativas cutícula."
    </string>
    <string name="nhv_prevencao">
        " Segundo a OIE, o melhor tratamento para NHP é utilização de antibióticos (oxitetraciclina e"
        "florfenicol 50%) se a doença for detectada na fase inicial."
        "É importante detectar precocemente para evitar canibalismo e iniciar tratamento rápido."
        "Usar cal hidratada para tratar fundo dos tanques reduz incidência de NHP. Secagem"
        "prolongada ao sol do fundo dos viveiros, desinfecção de equipamentos com hipoclorito de"
        "cálcio são medidas preventivas importantes."
        "Uso de animais livre de patógenos (SPF) é uma medida preventiva eficaz."
    </string>
    <string name="text_saiba_mais_nhv">Mais informações sobre a Hepatopancreatite Necrosante:</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="title_activity_doenca_scrolling">Doença</string>
    <string name="equipe_nomes">
        " Coordenadora:\n"
        "Dra. Lissandra Souto Cavalli (DDPA/SEAPI-RS)\n\n"
        "Desenvolvimento do Aplicativo:\n"
        "Eduardo H. P. Pooch (UFCSPA | Bolsista CNPq)\n\n"

        "Equipe AquaSaúde:\n"
        "Dra. Lissandra Souto Cavalli (DDPA/SEAPI-RS)\n"
        "Eduardo H. P. Pooch (UFCSPA | Bolsista CNPq)\n"
        "Dr. Silvio Cazella (UFCSPA)\n"
        "Dra. Maria Helena Firmino (DDPA/SEAPI-RS)\n"
        "Dra. Marcia Regina Stech\n"
        "Dr. Benito Brito (DDPA/SEAPI-RS)\n"
        "Dra. Kelly Tagliari Brito (DDPA/SEAPI-RS)\n"
        "Dr. Paulo César Abreu (FURG)\n"
        "Dr. Luis Alberto Romano (FURG)\n"
        "Dr. Arturo Sanchez-Paz (CIBNOR)"

    </string>
    <string name="icone">Ícone</string>
    <string name="instituicoes">INSTITUIÇÕES</string>
    <string name="equipe">EQUIPE</string>
    <string name="sobre_descricao">
        "O objetivo do AquaSaúde é trazer melhorias para a aquicultura brasileira através da"
        "disponibilização de"
        "informações sobre sanidade de animais aquáticos de forma ágil e de fácil compreensão."
        "Com o desenvolvimento do aplicativo, informações científicas que estavam distribuídas em"
        "inglês e em diferentes locais da internet agora estão disponíveis facilmente e de forma"
        "off-line aos produtores e demais interessados."
    </string>
    <string name="biosseguranca_intro">
        " A biossegurança descreve medidas que devem ser tomadas no cultivo animal para evitar o"
        "desencadeamento de doenças contagiosas na produção, a contaminação do cultivo pode levar a"
        "uma alta mortalidade dos animais e trazer prejuízos para o produtor.\n"
        "Na aquicultura, biossegurança se resume em criar barreiras que impeçam a entrada de doenças"
        "que contaminem peixes ou camarões. A prevenção é a medida mais importante no combate às"
        "doenças contagiosas.\n"
    </string>
    <string name="title_activity_checklist">Checklist</string>
    <string name="checklist_selecione">Selecione os procedimentos que são realizados na sua produção e verifique qual o nível de biossegurança aplicado:</string>
    <string name="comecar">COMEÇAR</string>
    <string name="proxima">Próxima</string>
    <string name="confirmar">Confirmar</string>
    <string name="atencao_sair">Deseja sair do jogo?</string>
    <string name="dialog_abandonar_voltar">O jogo será cancelado e todos os dados serão perdidos.</string>
    <string name="dialog_yes">Sim</string>
    <string name="dialog_no">Não</string>
    <string name="titulo_saiba_mais">Saiba Mais</string>
    <string name="manual_oie">Manual da OIE\n(em inglês)</string>
    <string name="logo_oie">Logo OIE</string>
    <string name="link_wssv" translatable="false"><![CDATA[http://www.oie.int/index.php?id=2439&L=0&htmfile=chapitre_wsd.htm]]></string>
    <string name="link_ihhnv" translatable="false"><![CDATA[http://www.oie.int/index.php?id=2439&L=0&htmfile=chapitre_ihhn.htm]]></string>
    <string name="link_imnv" translatable="false"><![CDATA[http://www.oie.int/index.php?id=2439&L=0&htmfile=chapitre_infectious_myonecrosis.htm]]></string>
    <string name="checkbox_1">Entrada de veículos higienizados e de apenas uma origem</string>
    <string name="checkbox_2">Controle de pragas e de entrada de animais silvestres e domésticos nas fazendas de cultivo</string>
    <string name="checkbox_3">Utiliza pós-larvas livres de enfermidades ou com atestado de sanidade</string>
    <string name="checkbox_4">Os animais são transportados de acordo com as normas e cuidados necessários durante a comercialização</string>
    <string name="checkbox_5">A despesca envolve cuidados como higiene pessoal e uso de EPIs do pessoal envolvido, bem como higienização de equipamentos envolvidos</string>
    <string name="checkbox_6">Alimentação balanceada analisando a quantidade de ração e os requerimentos nutricionais de acordo com a fase de vida</string>
    <string name="checkbox_7">Realiza tratamento para redução da matéria orgânica no solo de viveiros</string>
    <string name="checkbox_8">Realiza monitoramento e tratamento da água dos viveiros</string>
    <string name="checkbox_9">As  pessoas envolvidas no processo produtivo foram suficientemente treinadas para suas funções</string>
    <string name="checkbox_10">É realizada limpeza e sanitização nas instalações e após despescas</string>
    <string name="descricao_jogo">Teste seus conhecimentos sobre a aquicultura, para começar toque no botão abaixo:</string>
    <string name="titulo_quiz">Quiz AquaSaúde</string>
    <string name="bibliotecas">BIBLIOTECAS UTILIZADAS</string>
    <string name="bibliotecas_descricao">
        " Ícones: flaticon.com\n"
            "Glide: github.com/bumptech/glide\n"
            "PhotoView: github.com/chrisbanes/PhotoView\n"
            "AutoFit TextView: github.com/grantland/android-autofittextview\n"
    </string>
    <string name="doencas">Doenças</string>
    <string name="peixes">Peixes</string>
    <string name="boas_praticas">Boas Práticas</string>
    <string name="jogos">Jogos</string>
    <string name="sobre">Sobre</string>
    <string name="contato">Contato</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="fale_conosco">Fale Conosco</string>
</resources>