<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".controle.biosseguranca.ChecklistActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="16sp"
            android:text="@string/checklist_selecione" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e0e0e0" />

        <CheckBox
            android:id="@+id/checkbox_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/checkbox_1"
            android:textColor="#666" />

        <CheckBox
            android:id="@+id/checkbox_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/checkbox_2"
            android:textColor="#666" />

        <CheckBox
            android:id="@+id/checkbox_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/checkbox_3"
            android:textColor="#666" />

        <CheckBox
            android:id="@+id/checkbox_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/checkbox_4"
            android:textColor="#666" />

        <CheckBox
            android:id="@+id/checkbox_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/checkbox_5"
            android:textColor="#666" />

        <CheckBox
            android:id="@+id/checkbox_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/checkbox_6"
            android:textColor="#666" />

        <CheckBox
            android:id="@+id/checkbox_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/checkbox_7"
            android:textColor="#666" />

        <CheckBox
            android:id="@+id/checkbox_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/checkbox_8"
            android:textColor="#666" />

        <CheckBox
            android:id="@+id/checkbox_9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/checkbox_9"
            android:textColor="#666" />

        <CheckBox
            android:id="@+id/checkbox_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/checkbox_10"
            android:textColor="#666" />

        <Button
            android:id="@+id/bt_confirma_checklist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimary"
            android:text="@string/confirmar"
            android:textColor="#fff" />

    </LinearLayout>
</ScrollView>