<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.gov.rs.fepagro.aquasaude_camarao.controle.DoencaScrollingActivity">
    <!--tools:showIn="@layout/activity_doenca_scrolling"-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:paddingTop="20dp">

        <!--agente-->
        <LinearLayout
            android:id="@+id/layout_agente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/card"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/titulo_cards"
                android:gravity="center_vertical"
                android:padding="10dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    android:src="@drawable/icon_agente"
                    android:tint="#FFFFFF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/titulo_agente"
                    android:textColor="@color/branco"
                    android:textSize="20sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/text_agente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/imnv_agente" />
        </LinearLayout>
        <!--sinais clinicos-->
        <LinearLayout
            android:id="@+id/layout_sinais"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/card"
            android:orientation="vertical">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/titulo_cards"
                android:gravity="center_vertical"
                android:padding="10dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    android:src="@drawable/icon_sinais"
                    android:tint="@color/branco" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/titulo_sinais"
                    android:textColor="@color/branco"
                    android:textSize="20sp" />

            </LinearLayout>

            <ImageView

                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:paddingTop="15dp"
                android:src="@drawable/icon_mni" />

            <TextView
                android:id="@+id/text_sinais"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/imnv_sinais" />

        </LinearLayout>
        <!--imagens-->
        <LinearLayout
            android:id="@+id/layout_imagens"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/card"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/titulo_cards"
                android:gravity="center_vertical"
                android:padding="10dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/titulo_imagens"
                    android:padding="5dp"
                    android:src="@drawable/icon_imagens"
                    android:tint="@color/branco" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/titulo_imagens"
                    android:textColor="@color/branco"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>
        <!--prevencao-->
        <LinearLayout
            android:id="@+id/layout_prevencao"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/card"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/titulo_cards"
                android:gravity="center_vertical"
                android:padding="10dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/titulo_prevencao"
                    android:padding="5dp"
                    android:src="@drawable/icon_prevencao"
                    android:tint="@color/branco" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/titulo_prevencao"
                    android:textColor="@color/branco"
                    android:textSize="20sp" />
            </LinearLayout>


            <TextView
                android:id="@+id/text_prevencao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:text="@string/imnv_prevencao" />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
