<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="16dp">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:padding="25dp"
        android:onClick="rotate"
        android:src="@drawable/icon_camarao2"
        android:tint="@color/branco" />


        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/card_redondo"
            android:orientation="vertical"
            android:padding="20dp">


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/titulo_quiz"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/descricao_jogo" />

                <TextView
                    android:visibility="gone"
                    android:id="@+id/text_highscore_quiz"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:gravity="center" />

            </LinearLayout>

            <Button
                android:id="@+id/btComecarJogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/comecar"
                android:layout_alignParentBottom="true"
                android:textColor="@color/branco" />
        </RelativeLayout>


</LinearLayout>